[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FS_analyze"
version = "1.0.0"
authors = [
  { name="cuongvoSGH", email="cuongvo.polnd@gmail.com.com" },
]
description = "Financial Statement Analysis Package for Finance Professional"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cuongvoSGH/package_FS_analyze"